perl-ldap 0.37 -- Thu Aug 28 07:48:13 CDT 2008
==============================================

Bug Fixes
 * Pass correct hostname to SASL when connecting to a round-robin
 * Return the SASL error message when sasl client_start fails

Enhancements
 * Add Modify Increment (RFC 4525) support
 * Add Content Synchronization (RFC 4453) support

perl-ldap 0.36 -- Mon Apr 21 10:00:09 CDT 2008
==============================================

Bug Fixes
 * Fixed Net::LDAP::constant to return correct names for values 0 - 9
 * Fixed DSML test to be more tolerant of whitespace

Enhancements
 * Added controls for PreRead & PostRead

perl-ldap 0.35 -- Sun Mar 30 13:35:04 CDT 2008
==============================================

Bug Fixes
 * Fix wrapping in Net::LDAP::LDIF
 * Patch from Gergely Santa to allow entries with no attributes in LDIF
 * Fix modr?dn to fetch values in sclar context
 * send packets in sizes that IO::Socket::SSL can chew
 * Avoid attept to use undef as hash reference in ->sync
 * Ensure Bind.pm presents final server response to SASL object

Enhancements
 * Added vendorName/vendorVersion (RFC 3045) to root_dse()
 * add option to support IPv6
 * Allow Entry->deleted to be called with a single value is well as array ref
 * Added Net::LDAP::Control::PasswordPolicy to support draft RFC

perl-ldap 0.34 -- Sat Feb 10 17:39:49 CST 2007
==============================================

Bug Fixes
  * Improve dealing with mixed case attributes in Net::LDAP::Entry
  * Documentation fixes & updates
  * Don't let Net::LDAP->bind() die on SASL errors
  * Fix case-folding in Net::LDAP::Util::ldap_explode_dn()
  * Saner default for ldapi socket
  * Update test suite to work with recent OpenLDAP versions
  * The usual bunch of typo fixes
  * Fix escaping on non-ascii characters in Net::LDAP::Filter

Enhancements
  * Flexible handling of line ends in Net::LDAP::LDIF when reading
  * Improve writing speed in Net::LDAP::LDIF