@@ -17,4 +17,9 @@ no_index:
 requires:
   Convert::ASN1: 0.07
   perl: 5.004
-version: 0.37
+resources:
+  ListArchive: http://perl.markmail.org/search/list:perl-ldap
+  MailingList: http://lists.cpan.org/showlist.cgi?name=perl-ldap
+  homepage: http://ldap.perl.org/
+  repository: http://git.goingon.net/?p=perl-lda.git;a=summary
+version: 0.38
