@@ -16,12 +16,12 @@ Hash: SHA1
 
 SHA1 24a5cce207ec42358c1cff40639e6dff8d7e8d6b .gitignore
 SHA1 d0b391ea67d4af1e877c4476490c95cf3f8783e6 CREDITS
-SHA1 24b111e2babe43d89238159d69519c39c373a31c Changes
+SHA1 9bf4598bfc2400b535cbd53aa1f9f307d40eb21d Changes
 SHA1 18422f27b2f17b10e9d18b4e482d7bfc95c8df86 INSTALL
 SHA1 c2bec936399190520629d3a2e25b313c471c241e MANIFEST
 SHA1 88cb906904179e0adf52007f0679a294294ea021 MANIFEST.SKIP
-SHA1 9d4376f9d94e41f1ddd484f92ac4c9170d7ab388 META.yml
-SHA1 a73ad16739e5ebb9df0242295510cd3dcd4785ba Makefile.PL
+SHA1 9f7e4671918e8e0a9f5ac29c3cf7af6f8f6f4d0e META.yml
+SHA1 7767423201733f281c8b344b2b9079b2f545af2e Makefile.PL
 SHA1 f3b66414a0872801f3c4c38a93499d0fe48509ef README
 SHA1 6c5729e4c6bb46c66fcc33dbb8231292d1c14dee TODO
 SHA1 8e15e7abefa826736358685aa1115810baaa9b4a bin/ldapdelete
@@ -82,8 +82,8 @@ SHA1 a3b43f30a4aa19adb8cda1ceaf5b19da0a5e1cae inc/attributes.pm
 SHA1 4dde3f6e30c239c15c234309b7c32dd5a7d409a9 install-nomake
 SHA1 da956a83d04192b551118b6ddffc32977cff5427 lib/Bundle/Net/LDAP.pm
 SHA1 3637699c1d2e0427a74aa5e44ef0f61a725a83f4 lib/LWP/Protocol/ldap.pm
-SHA1 f028f8fee44babefc7122fefcfd008f9af402e23 lib/Net/LDAP.pm
-SHA1 c20c8cb8fdf5f930a00ffa24706be4a67e9fc4f1 lib/Net/LDAP.pod
+SHA1 5e12c15d019a9ecca587cdb2445a3223c97e7322 lib/Net/LDAP.pm
+SHA1 a4f08a76aa0da5c2c5af06207b230aff3a429c41 lib/Net/LDAP.pod
 SHA1 9161a577599bc648dfb2ce46fcb10a96a62dfb6a lib/Net/LDAP/ASN.pm
 SHA1 4b1f29fd2ca60e4bf1bcf6ae8d97f56c2442eb56 lib/Net/LDAP/Bind.pm
 SHA1 8b37856e342f814ff7ad3f7906ccf9025ca54bdd lib/Net/LDAP/Constant.pm
@@ -91,7 +91,7 @@ SHA1 75265c14cc727900c1cb21aeac3dc8d09bceda8a lib/Net/LDAP/Control.pm
 SHA1 ab3a966de9724b2ce4197757fec087a766bb4a09 lib/Net/LDAP/Control/EntryChange.pm
 SHA1 f2db11b80336a47c8bc5a1ebeb2ad0228838275c lib/Net/LDAP/Control/ManageDsaIT.pm
 SHA1 409330c198b6459bffdb78761ce22a300417337e lib/Net/LDAP/Control/Paged.pm
-SHA1 d9119f1138226c7823905afd8946d8be66e849e3 lib/Net/LDAP/Control/PasswordPolicy.pm
+SHA1 fe30617a053e2edbdcfae924390fb940dff1884e lib/Net/LDAP/Control/PasswordPolicy.pm
 SHA1 28e53a53f254fbee4f8b71ab311f9ca833007f59 lib/Net/LDAP/Control/PersistentSearch.pm
 SHA1 4aefe0e20e65cef8c42d631de86b4fcaabc4ad93 lib/Net/LDAP/Control/PostRead.pm
 SHA1 e9f76fc3b7b3cb0ef6d81fba0650373959a8abde lib/Net/LDAP/Control/PreRead.pm
@@ -107,8 +107,8 @@ SHA1 3aa62f4c9ce94ead75f633a7fa1ced2a2bf9f4dc lib/Net/LDAP/DSML.pm
 SHA1 9bbe4edd5987aacc832b09a2d4ed043752f7ebdd lib/Net/LDAP/Entry.pm
 SHA1 19e9a756153d83d4f31cc821826f84125933a2e0 lib/Net/LDAP/Entry.pod
 SHA1 f9a7c3e2ad3e9398c7c142ce6e015af2a7060f17 lib/Net/LDAP/Examples.pod
-SHA1 e52b67753bb12fd61d10cab20905fdb390361283 lib/Net/LDAP/Extension.pm
-SHA1 61301677c081a6c2afa4bd39250d3d50fd2047bf lib/Net/LDAP/Extension/SetPassword.pm
+SHA1 b3ad85252ac3fa97bd63149cbe1fc94302b2acea lib/Net/LDAP/Extension.pm
+SHA1 acc63277837285411078a27ed73c575316fa6717 lib/Net/LDAP/Extension/SetPassword.pm
 SHA1 e701488dfea2250b60bf1a5e58d556ab173f57a8 lib/Net/LDAP/Extension/WhoAmI.pm
 SHA1 1d0e9a195cec05800c9ad9d4fcb2d567bf4dc116 lib/Net/LDAP/Extra.pm
 SHA1 ff4ff38435edd72be15178a7afceb486a560a804 lib/Net/LDAP/FAQ.pod
@@ -123,7 +123,7 @@ SHA1 bc918716f7c14d3dfba582898c9c7487d08cea86 lib/Net/LDAP/Message.pm
 SHA1 6a8b2d30a43d6295de37771c2576cb66c7f10bfd lib/Net/LDAP/Message.pod
 SHA1 1ae5e4d10afff9f5d6cd8262a294db331fb461d5 lib/Net/LDAP/RFC.pod
 SHA1 4921a9eb85f595aaa4c5c2bf7261feae54440763 lib/Net/LDAP/Reference.pod
-SHA1 f06325e3a75f69792014a762919c1fcf90ab7d78 lib/Net/LDAP/RootDSE.pm
+SHA1 cc2a08d0823bd8ceef9b8977bfe9436e5f9e3144 lib/Net/LDAP/RootDSE.pm
 SHA1 91b9629d67cc2fe12689e4a9b42cba658fc206fd lib/Net/LDAP/Schema.pm
 SHA1 4e23323449b264e98257c4bc257aaa454469386b lib/Net/LDAP/Schema.pod
 SHA1 dc6bb8acf0c4bf514b02aee9f167a67e5920e386 lib/Net/LDAP/Search.pm
@@ -153,7 +153,7 @@ SHA1 5fc1dc6f5ec7a7ef372585f154f3c9a6020d3134 test.cfg
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Darwin)
 
-iEYEARECAAYFAki2ny0ACgkQR0BL4gbYw3QvRACghtDa7UVuxFTHNFAJFSjVZLU0
-eNUAn375ZIZ92Rfgyo0H2mDe8xuWStWM
-=57M5
+iEYEARECAAYFAkjWWLwACgkQR0BL4gbYw3RIqgCeNAlOU/3nRDum8qp8UkGCwzov
+qqcAmgLLwK4UPx5/2R02bEEXwJ5J+0+R
+=WiMd
 -----END PGP SIGNATURE-----
