@@ -7,7 +7,7 @@ package Net::LDAP::Extension;
 use vars qw(@ISA $VERSION);
 
 @ISA = qw(Net::LDAP::Message);
-$VERSION = "1.01";
+$VERSION = "1.02";
 
 #fetch the response name
 sub response_name { 
